[project]
name = "screen-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "siddharth1998",email = "siddharth1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyscreeze (>=1.0.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)"
]

[tool.poetry]
packages = [{include = "screen_monitor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
